--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
     <link rel="stylesheet" href="./css.css">
 </head>
 <body>
+    <header class="site_header">
+
+
+    </header>
     
+    <main>
+        <section class="section">
+
+        </section>
+    </main>
+
+    <footer class="site_footer">
+        
+    </footer>
 </body>
 <script src="./js.js"></script>
 </html>
