--- a/index.html
+++ b/index.html
@@ -1,17 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,600;0,700;1,600&display=swap"
+        rel="stylesheet">
+
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./css.css">
 </head>
+
 <body>
-    <header class="site_header">
 
-
+    <header class="site_header container">
+        <a href="#">
+            <img src="./img/Elecxo 1.png" alt="xcas">
+        </a>
+        <input placeholder="Search your item" type="text">
+        <div class="header_btn">
+            <a href="#"><i class='bx bxs-home'></i></a>
+            <a href="#"><i class='bx bx-user'></i></a>
+            <a href="#"><i class='bx bx-cart'></i> </a>
+        </div>
     </header>
-    
+
+    <nav class="navbar">
+        <button>Categories</button>
+
+
+
+    </nav>
+
+
+
     <main>
         <section class="section">
 
@@ -19,8 +44,9 @@
     </main>
 
     <footer class="site_footer">
-        
+
     </footer>
 </body>
 <script src="./js.js"></script>
+
 </html>
