--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+             <!-- // header site -->
 
     <header class="site_header container">
         <a href="#">
@@ -28,9 +29,40 @@
         </div>
     </header>
 
-    <nav class="navbar">
-        <button>Categories</button>
+            <!-- //// Navbar site  -->
 
+    <nav class="navbar container">
+        <button>Categories</button>
+        <div class="navbar_wrapper">
+            <div class="navbar_box">
+                <button>Laptops</button>
+                <img src="./img/navbar/61Er61SxBhL 1.png" alt="">
+            </div>
+            <div class="navbar_box">
+                <button>Camera</button>
+                <img src="./img/navbar/914hFeTU2-L 1.png" alt="">
+            </div>
+            <div class="navbar_box">
+                <button>Accessories</button>
+                <img src="./img/navbar/51de3t4CDhL 1.png" alt="">
+            </div>
+            <div class="navbar_box">
+                <button>TV</button>
+                <img src="./img/navbar/71vZypjNkPS 1.png" alt="">
+            </div>
+            <div class="navbar_box">
+                <button>Headphones</button>
+                <img src="./img/navbar/Headphone.png" alt="">
+            </div>
+            <div class="navbar_box">
+                <button>Storage</button>
+                <img src="./img/navbar/61fkOHNmzpL.png" alt="">
+            </div>
+            <div class="navbar_box">
+                <button>Home Theater</button>
+                <img src="./img/navbar/91MQzfr2gVL 1.png" alt="">
+            </div>
+        </div>
 
 
     </nav>
